scroll navigation safari fix

--- a/src/sass/components/_pen.sass
+++ b/src/sass/components/_pen.sass
@@ -1,6 +1,6 @@
 .pen
 	+helvetica
-	z-index: 6
+	z-index: 7
 	position: fixed
 
 	&__background
