--- a/src/sass/components/_project.sass
+++ b/src/sass/components/_project.sass
@@ -56,6 +56,7 @@
 
 	&__logo
 		+animate
+		line-height: 0
 		pointer-events: none
 		margin-top: auto
 
