--- a/src/sass/components/_scroll-navigation.sass
+++ b/src/sass/components/_scroll-navigation.sass
@@ -4,56 +4,70 @@
 	right: 15px
 	top: 50%
 	transform: translateY(-50%)
+	+md
+		display: none
 
 	&__list
+		min-height: 175px
 		display: flex
 		flex-direction: column
+		justify-content: space-between
+		align-items: flex-end
 
 	&__item
-		transition: 300ms
-		margin: 4px 0 4px auto
-		min-height: 34px
+		min-height: 22px
+		min-width: 25px
 		display: flex
-		justify-content: flex-end
 		align-items: center
-		+hover
+		text-align: right
+		position: relative
+		&:after
+			transition: 300ms
+			pointer-events: none
+			content: ''
+			position: absolute
+			top: 50%
+			right: 0
+			transform: translateY(-50%)
+			display: block
+			width: 17px
+			height: 17px
 			background-color: $purple
 			border-radius: 500px
+		&:before
+			transition: 300ms
+			content: ''
+			background-color: transparent
+			border-radius: 500px
+			position: absolute
+			width: calc(100% + 8px)
+			height: calc(100% + 8px)
+			left: -2.5px
+			top: -4px
+		+hover
+			&:before
+				background-color: $purple
+			&:after
+				background-color: $white
 			.scroll-navigation__link
-				padding: 0 8px
-				font-size: 16px
-
-				&:after
-					margin-left: 8px
-					background-color: $white
+				transform: scale(1)
 
 	&__item_active
-		background-color: $purple
-		border-radius: 500px
-
+		&:before
+			background-color: $purple
+		&:after
+			background-color: $white
 		.scroll-navigation__link
-			padding: 0 8px 0 12px
-			font-size: 16px
-
-			&:after
-				margin-left: 8px
-				background-color: $white
+			transform: scale(1)
 
 	&__link
+		transform-origin: right 50%
 		transition: 300ms
-		padding: 0 8px
+		transform: scale(0)
+		padding-right: 29px
+		padding-left: 9px
+		position: relative
 		+helvetica
-		color: white
-		font-size: 0
-		display: flex
-		justify-content: flex-end
-		align-items: center
+		color: $white
 
-		&:after
-			content: ''
-			display: block
-			width: 20px
-			height: 20px
-			border-radius: 50%
-			background-color: $purple
 
